fix flex-wrap

--- a/src/document.css
+++ b/src/document.css
@@ -59,7 +59,7 @@ section {
 }
 
 .flex-wrap {
-	display: flex-wrap;
+	flex-wrap: wrap;
 }
 
 .flex1 {
